# ngin-link-rust-fw

./: Cargo.toml  GEMINI.md  README.md
.cargo/: config.toml
crates/bsp-f446/: Cargo.toml
crates/bsp-f446/src/: can.rs  lib.rs  usb.rs
crates/can-protocol/: Cargo.toml
crates/can-protocol/src/: lib.rs  obd2.rs  uds.rs
crates/gs-usb-protocol/: Cargo.toml
crates/gs-usb-protocol/src/: handler.rs  handler_tests.rs  lib.rs
crates/usb-protocol/: Cargo.toml
crates/usb-protocol/src/: gs_usb_types.rs  handler.rs  lib.rs
docs/: BSP-446.md
firmware/: Cargo.toml  build.rs
firmware/src/: main.rs
src/: main.rs
src/usb/: handler.rs  mod.rs
