[workspace]
members = [
    "crates/bsp-f446",
    "crates/usb-protocol",
    "crates/can-protocol",
    "firmware"
]
resolver = "2"

# Centralizamos las dependencias para asegurar que todos los crates 
# usen exactamente la misma versión, evitando conflictos.
[workspace.dependencies]
defmt = "0.3"
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f446re", "unstable-pac", "memory-x", "time-driver-any", "exti"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
