[workspace]
members = [
    "crates/bsp-f446",
    "crates/gs-usb-protocol",
    "crates/can-protocol",
    "firmware"
]
resolver = "2"

# Centralizamos las dependencias para asegurar que todos los crates 
# usen exactamente la misma versión, evitando conflictos.
[workspace.dependencies]
defmt = "0.3"
embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32f446re", "unstable-pac", "memory-x", "time-driver-any", "exti"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
cortex-m-rt = "0.7"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
bytemuck = { version = "1.16.0", features = ["derive"] }
