[package]
name = "ngin-link-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt.workspace = true
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-stm32.workspace = true
embassy-executor.workspace = true
embassy-usb.workspace = true
static_cell = "2.0"

# Dependencias a nuestros crates del workspace
bsp-f446 = { path = "../crates/bsp-f446" }
usb-protocol = { path = "../crates/usb-protocol" }
